Fix logo alignment on dashboard
Fixes https://github.com/jupyter/notebook/issues/2575

--- a/notebook/static/base/less/page.less
+++ b/notebook/static/base/less/page.less
@@ -58,6 +58,7 @@ body > #header {
 }
 
 #ipython_notebook {
+    flex: 1;
     padding-left: 0px;
     padding-top: (@navbar-height - @logo_height) / 2;
     padding-bottom: (@navbar-height - @logo_height) / 2;
